[project]
name = "content-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.11"
dependencies = [
    "anyscale==0.5.131",
    "black==23.3.0",
    "cleanlab==2.3.1",
    "fastapi==0.95.2",
    "flake8==6.0.0",
    "flake8-pyproject==1.2.3",
    "great-expectations==0.16.5",
    "hyperopt==0.2.7",
    "ipywidgets>=8",
    "isort==5.12.0",
    "jupyterlab==3.6.3",
    "lime==0.2.0.1",
    "matplotlib==3.7.1",
    "mkdocs==1.4.2",
    "mkdocstrings[python]>=0.18",
    "mlflow==2.3.1",
    "nltk==3.8.1",
    "numpy==1.24.3",
    "numpyencoder==0.3.0",
    "pandas==2.0.1",
    "pre-commit==3.2.2",
    "pytest==7.3.1",
    "pytest-cov==4.0.0",
    "python-dotenv==1.0.0",
    "pyupgrade==3.3.2",
    "ray[air]==2.31.0",
    "scikit-learn==1.2.2",
    "seaborn==0.12.2",
    "setuptools>=66.1.1",
    "snorkel==0.9.9",
    "sqlalchemy==1.4.48",
    "torch==2.0.0",
    "transformers==4.28.1",
    "typer==0.9.0",
    "wheel>=0.45.1",
    "wordcloud==1.9.2",
]
